local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: yaaraapi.com
      http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: server-1-service
                port:
                  number: 8000
                  
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: server-2-service
                port:
                  number: 8000
